# Galois

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile
.github/workflows/: build-and-test.yml
inputs/: .gitattributes  CMakeLists.txt  rmat10.el
inputs/cora/: cora-dims.txt  cora-labels.txt  cora-test_mask.txt  cora-train_mask.txt  cora-val_mask.txt  cora.csgr  cora.el  cora.features  cora.ft  cora.gr  cora.sgr  cora_edgelist.txt  cora_labels.txt
inputs/tester/: tester-dims.txt  tester-labels.txt  tester-mlabels.txt  tester-test_mask.txt  tester-train_mask.txt  tester-val_mask.txt  tester.csgr  tester.el
inputs/wmd/: data.001.csv  dynamic0.txt  dynamic1.txt  static  static.csv
libcusp/test/: CMakeLists.txt  shad-dist-graph.cpp
libdeepgalois/src/: DistContext.cpp  Train.cpp
libdist/src/: NetworkBuffered.cpp
libgalois/: CMakeLists.txt
libgalois/src/: FileGraph.cpp  HWTopoLinux.cpp  PageAlloc.cpp
libgalois/test/: CMakeLists.txt  bandwidth.cpp  gcollections.cpp  graph-compile-lscsr.cpp  large-vector.cpp  prefixsum.cpp  reduction.cpp  wfl.cpp
libgnn/test/: CMakeLists.txt  accuracy-test.cpp  aggregate-sync-test.cpp  back-conv-test.cpp  convlayer-test.cpp  epoch-test.cpp  f1-test.cpp  gcn-sample-edge-test.cpp  (+11 more)
libwmd/: CMakeLists.txt
libwmd/test/: CMakeLists.txt  el-graph-build.cpp  wmd-graph-build.cpp
lonestar/: CMakeLists.txt
lonestar/mining/distributed/: CMakeLists.txt
lonestar/mining/distributed/triangle-counting/: CMakeLists.txt  README.md  dist_engine.h  dist_engine_work.h  old_dist_engine.h  tc_mine.cpp
(+157 files in other folders)
